--- a/gb/22/9/14/n13824538.md
+++ b/gb/22/9/14/n13824538.md
@@ -49,7 +49,7 @@
 <p>亲子一起堕落简直就是一石二鸟的负面版。</p>
 <p>首先请铭记“恶有恶报”，别再使用诅咒的话语了。</p>
 <p>平日也应切记尽量别使用负面话语。</p>
-<p>在停止诅咒的瞬间，诅咒就会解除了。</p>
+<p>在停止诅咒的瞬间，诅咒就会解除了。<strong>⊙</strong></p>
 <h3><span style="color: #000000;"><a style="color: #000000;" href="https://www.books.com.tw/products/0010931684" target="_blank" rel="noopener noreferrer">本文摘自：《<span style="color: #0000ff;">让孩子心智坚定又自信的10句话：别小看“关键一句话”的力量！妈妈的教养口头禅，改变孩子的一生</span>》，采实文化提供。</a></span></h3>
 <h3><span style="color: #008000;"><a style="color: #008000;" href=><a href="https://github.com/19920513/djy/blob/master/gb/21/8/31/n13200805.md#1" target="_blank" rel="noopener noreferrer">●不再焦虑的深层教养：培养慈悲心</a></span><br />
 <span style="color: #008000;"> <a style="color: #008000;" href=><a href="https://github.com/19920513/djy/blob/master/gb/21/10/25/n13328790.md#1" target="_blank" rel="noopener noreferrer">●每个孩子都很独特 个性不同教养无法复制</a></span><br />
@@ -68,31 +68,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896520.md#1">【时事人物】风投神话破灭 孙正义退场之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896482.md#1">【未解之谜】憋了很久 一定要说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900752.md#1">【全球新闻】大陆火葬场弃遗骨 感染潮蔓延农村</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900273.md#1">【秦鹏观察】新年第一声雷 党媒高喊“斗争”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900365.md#1">【新闻看点】习近平被迫掉头 几个讯号令他震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898850.md#1">告别荒诞2022——北京某教授最犀利嘲讽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898823.md#1">王友群：习近平2023年面临四大挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899515.md#1">女网重申先解决彭帅性侵案 再考虑中国赛事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898840.md#1">范冰冰晒无名指戴巨型红宝石 被传好事近了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899526.md#1">梁朝伟戴公仔头套滑雪 获网友大赞“好可爱”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898066.md#1">加拿大新唐人将推出奇幻电影《再次成为神》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898809.md#1">黄磊确诊十多天未痊愈 透露演员老父还在医院</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13899955.md#1">KID报喜当爸爸 “亲剪脐带”全程跟拍儿子诞生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896472.md#1">增强免疫力的6种有效方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893567.md#1">研究：忧郁患者都缺“镁”这营养素不可轻忽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896469.md#1">癌症术后15年未复发 日本医生分享5秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891163.md#1">研究：吃盐太少可能和太多一样有危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898889.md#1">预防“沉默杀手” 留意肾脏病 5大症状</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963059.md#1">【全球新闻】成员国全部批准 芬兰成北约第31个成员国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962822.md#1">【中国禁闻】海南启动全岛封关运作 专家不看好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961317.md#1">遭大陆主持人强拉外套 王心凌吓得脸色大变</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/14/n13824538.htm">负面话语杀伤力强 误用恐影响孩子的一生</a></p><hr>
