--- a/gb/23/1/11/n13904335.md
+++ b/gb/23/1/11/n13904335.md
@@ -36,31 +36,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238642.md#1" target="_blank">晓明：文革中广西204地质勘探队惨绝人寰的凶杀案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9772848.md#1" target="_blank">刘晓：救了毛一命的延安保卫处长凄惨下场</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10827431.md#1" target="_blank">谴责中共活摘器官 医学教授：极端可怕罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899460.md#1">【未解之谜】预言家珍妮之二 最意外的总统选举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/21/n13889120.md#1">【爱丽话五千】古人白头偕老到底有什么秘诀？如何保持婚姻长久</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903969.md#1">【探索时分】美挑衅者X与俄卡-52直升机的差距</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903898.md#1">【十字路口】战狼为何流放？北京三维稳迷魂箭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903318.md#1">印尼发生7.7级强烈地震</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903135.md#1">中共外交部人事异动 战狼赵立坚调职</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902912.md#1">江西染疫死者出殡 途中遇车祸 多名儿女被撞死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902526.md#1">王祖贤息影19年没工作 曾坦言钱一辈子花不完</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902543.md#1">大陆女星沈月自曝：入行首部戏的片酬被偷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903390.md#1">与林宥嘉结婚6周年 丁文琪铁婚纪念文引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902301.md#1">《阿凡达：水之道》成为史上票房第7大电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902573.md#1">与梁咏琪饰弃女父母 郭富城：角色与我反差大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902197.md#1">世界最快乐国家的心理学家：我们不做3件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901565.md#1">断食可抗癌？三期结肠癌四个月竟痊愈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902782.md#1">美国房价到底将下跌多少？一众专家这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894433.md#1">8种好零食 每天吃一把死亡风险降20%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902435.md#1">腰背痛怎么办？症状、原因、治疗一次看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963059.md#1">【全球新闻】成员国全部批准 芬兰成北约第31个成员国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961914.md#1">周兴哲与赵岱新秘婚 今甜晒合照宣布“怀孕”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/11/n13904335.htm">神韵寓意深远 医生欣喜找回传统文化的根</a></p><hr>
